Change: let menu_icon bar fixed on mobile

--- a/src/stylesheets/layout.scss
+++ b/src/stylesheets/layout.scss
@@ -50,10 +50,6 @@ header {
 }
 
 @media only screen and (max-width: $breakpoint-mobile) {
-  header {
-    position: absolute;
-  }
-
   .map-panel {
     height: 80%;
   }
